app/static/css/output.css
/* ... */
.my-\[5px\]{
  margin-top: 5px;
  margin-bottom: 5px;
}

.-ml-\[1\.5rem\]{
  margin-left: -1.5rem;
}

.-mt-3{
  margin-top: -0.75rem;
}

.mb-0{
  margin-bottom: 0px;
}

.mb-2{
  margin-bottom: 0.5rem;
}

.mb-2\.5{
  margin-bottom: 0.625rem;
}

.mb-20{
  margin-bottom: 5rem;
}

.mb-3{
  margin-bottom: 0.75rem;
}

.mb-4{
  margin-bottom: 1rem;
}

.mb-5{
  margin-bottom: 1.25rem;
}

.mb-8{
  margin-bottom: 2rem;
}

.mb-\[0\.125rem\]{
  margin-bottom: 0.125rem;
}

.mb-\[10px\]{
  margin-bottom: 10px;
}

.ml-3{
  margin-left: 0.75rem;
}

.ml-5{
  margin-left: 1.25rem;
}

.ml-6{
  margin-left: 1.5rem;
}

.ml-\[30px\]{
  margin-left: 30px;
}

.ml-\[3px\]{
  margin-left: 3px;
}

.ml-auto{
  margin-left: auto;
}

.mr-1{
  margin-right: 0.25rem;
}

.mr-2{
  margin-right: 0.5rem;
}

.mr-4{
  margin-right: 1rem;
}

.mr-6{
  margin-right: 1.5rem;
}

.mr-\[6px\]{
  margin-right: 6px;
}

.mr-\[8px\]{
  margin-right: 8px;
}

.mr-auto{
  margin-right: auto;
}

.mt-10{
  margin-top: 2.5rem;
}

.mt-14{
  margin-top: 3.5rem;
}

.mt-2{
  margin-top: 0.5rem;
}

.mt-2\.5{
  margin-top: 0.625rem;
}

.mt-20{
  margin-top: 5rem;
}

.mt-5{
  margin-top: 1.25rem;
}

.mt-\[0\.15rem\]{
  margin-top: 0.15rem;
}

.box-border{
  box-sizing: border-box;
}

.box-content{
  box-sizing: content-box;
}

.\!block{
  display: block !important;
}

.block{
  display: block;
}

.inline-block{
  display: inline-block;
}

.inline{
  display: inline;
}

.flex{
  display: flex;
}

.table{
  display: table;
}

.grid{
  display: grid;
}

.hidden{
  display: none;
}

.\!h-0{
  height: 0px !important;
}

.\!h-px{
  height: 1px !important;
}

.h-0{
  height: 0px;
}

.h-1{
  height: 0.25rem;
}

.h-1\.5{
  height: 0.375rem;
}

.h-10{
  height: 2.5rem;
}

.h-14{
  height: 3.5rem;
}

.h-2\/5{
  height: 40%;
}

.h-3{
  height: 0.75rem;
}

.h-4{
  height: 1rem;
}

.h-5{
  height: 1.25rem;
}

.h-6{
  height: 1.5rem;
}

.h-7{
  height: 1.75rem;
}

.h-8{
  height: 2rem;
}

.h-9{
  height: 2.25rem;
}

.h-\[0\.9375rem\]{
  height: 0.9375rem;
}

.h-\[1\.125rem\]{
  height: 1.125rem;
}

.h-\[100px\]{
  height: 100px;
}

.h-\[10px\]{
  height: 10px;
}

.h-\[120px\]{
  height: 120px;
}

.h-\[160px\]{
  height: 160px;
}

.h-\[1px\]{
  height: 1px;
}

.h-\[200px\]{
  height: 200px;
}

.h-\[260px\]{
  height: 260px;
}

.h-\[2px\]{
  height: 2px;
}

.h-\[300px\]{
  height: 300px;
}

.h-\[30px\]{
  height: 30px;
}

.h-\[32px\]{
  height: 32px;
}

.h-\[380px\]{
  height: 380px;
}

.h-\[40px\]{
  height: 40px;
}

.h-\[42px\]{
  height: 42px;
}

.h-\[48px\]{
  height: 48px;
}

.h-\[4px\]{
  height: 4px;
}

.h-\[500px\]{
  height: 500px;
}

.h-\[50px\]{
  height: 50px;
}

.h-\[512px\]{
  height: 512px;
}

.h-\[56px\]{
  height: 56px;
}

.h-\[6px\]{
  height: 6px;
}

.h-\[70vh\]{
  height: 70vh;
}

.h-\[72px\]{
  height: 72px;
}

.h-\[80px\]{
  height: 80px;
}

.h-\[calc\(100\%-100px\)\]{
  height: calc(100% - 100px);
}

.h-auto{
  height: auto;
}

.h-full{
  height: 100%;
}

.h-screen{
  height: 100vh;
}

.max-h-\[calc\(100\%-64px\)\]{
  max-height: calc(100% - 64px);
}

.max-h-full{
  max-height: 100%;
}

.min-h-\[1\.5rem\]{
  min-height: 1.5rem;
}

.min-h-\[305px\]{
  min-height: 305px;
}

.min-h-\[325px\]{
  min-height: 325px;
}

.min-h-\[40px\]{
  min-height: 40px;
}

.min-h-\[auto\]{
  min-height: auto;
}

.min-h-screen{
  min-height: 100vh;
}

.\!w-px{
  width: 1px !important;
}

.w-0{
  width: 0px;
}

.w-1{
  width: 0.25rem;
}

.w-1\.5{
  width: 0.375rem;
}

.w-1\/2{
  width: 50%;
}

.w-10{
  width: 2.5rem;
}

.w-11\/12{
  width: 91.666667%;
}

.w-2{
  width: 0.5rem;
}

.w-3{
  width: 0.75rem;
}

.w-4{
  width: 1rem;
}

.w-5{
  width: 1.25rem;
}

.w-6{
  width: 1.5rem;
}

.w-7{
  width: 1.75rem;
}

.w-72{
  width: 18rem;
}

.w-8{
  width: 2rem;
}

.w-9{
  width: 2.25rem;
}

.w-96{
  width: 24rem;
}

.w-\[0\.9375rem\]{
  width: 0.9375rem;
}

.w-\[1\.125rem\]{
  width: 1.125rem;
}

.w-\[100px\]{
  width: 100px;
}

.w-\[150px\]{
  width: 150px;
}

.w-\[15px\]{
  width: 15px;
}

.w-\[160px\]{
  width: 160px;
}

.w-\[260px\]{
  width: 260px;
}

.w-\[2px\]{
  width: 2px;
}

.w-\[300px\]{
  width: 300px;
}

.w-\[304px\]{
  width: 304px;
}

.w-\[30px\]{
  width: 30px;
}

.w-\[328px\]{
  width: 328px;
}

.w-\[32px\]{
  width: 32px;
}

.w-\[45\%\]{
  width: 45%;
}

.w-\[4px\]{
  width: 4px;
}

.w-\[500px\]{
  width: 500px;
}

.w-\[50px\]{
  width: 50px;
}

.w-\[6px\]{
  width: 6px;
}

.w-\[70px\]{
  width: 70px;
}

.w-\[72px\]{
  width: 72px;
}

.w-\[76px\]{
  width: 76px;
}

.w-\[calc\(100\%-100px\)\]{
  width: calc(100% - 100px);
}

.w-auto{
  width: auto;
}

.w-full{
  width: 100%;
}

.w-screen{
  width: 100vw;
}

.min-w-0{
  min-width: 0px;
}

.min-w-\[100px\]{
  min-width: 100px;
}

.min-w-\[100vw\]{
  min-width: 100vw;
}

.min-w-\[310px\]{
  min-width: 310px;
}

.min-w-\[48px\]{
  min-width: 48px;
}

.min-w-\[64px\]{
  min-width: 64px;
}

.max-w-\[150px\]{
  max-width: 150px;
}

.max-w-\[1600px\]{
  max-width: 1600px;
}

.max-w-\[200px\]{
  max-width: 200px;
}

.max-w-\[267px\]{
  max-width: 267px;
}

.max-w-\[300px\]{
  max-width: 300px;
}

.max-w-\[325px\]{
  max-width: 325px;
}

.max-w-\[800px\]{
  max-width: 800px;
}

.max-w-\[90\%\]{
  max-width: 90%;
}

.max-w-\[calc\(100\%-1rem\)\]{
  max-width: calc(100% - 1rem);
}

.max-w-full{
  max-width: 100%;
}

.flex-1{
  flex: 1 1 0%;
}

.flex-auto{
  flex: 1 1 auto;
}

.flex-none{
  flex: none;
}

.flex-shrink{
  flex-shrink: 1;
}

.flex-shrink-0{
  flex-shrink: 0;
}

.shrink-0{
  flex-shrink: 0;
}

.flex-grow{
  flex-grow: 1;
}

.grow{
  flex-grow: 1;
}

.grow-0{
  flex-grow: 0;
}

.basis-auto{
  flex-basis: auto;
}

.origin-\[0_0\]{
  transform-origin: 0 0;
}

.origin-\[center_bottom_0\]{
  transform-origin: center bottom 0;
}

.origin-bottom{
  transform-origin: bottom;
}
/* ... */

